# sub-fast-net

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  DESIGN_CN.md  README.md  build.rs
configs/: debug_overfit.toml  debug_overfit_wgpu.toml  goal_500_wgpu.toml  profile_current.toml  smoke.toml  train_cuda.toml  train_wgpu.toml  tui_smoke.toml  verify_empty_ratio_wgpu.toml
data/validation_samples/: label_masks.json
docs/: BENCHMARK.md  DATASET.md  INFERENCE.md  METRICS.md  MODEL.md  PREPROCESSING.md  TRAINING.md
outputs/goal_500_wgpu_v10/: config.snapshot.toml  metrics.jsonl  summary.json
outputs/profile_current/: config.snapshot.toml
outputs/profile_wgpu_compare/: config.snapshot.toml  metrics.jsonl  summary.json  training_profile.jsonl  training_profile_summary.json
outputs/profile_wgpu_current/: config.snapshot.toml  metrics.jsonl  summary.json  training_profile.jsonl  training_profile_summary.json
outputs/subfastnet_tiny_wgpu/: config.snapshot.toml  metrics.jsonl
outputs/test_benchmark_outputs/: benchmark_metrics.jsonl  benchmark_summary.json  config.snapshot.toml  metrics.jsonl  summary.json
outputs/test_smoke_train/: config.snapshot.toml  metrics.jsonl  summary.json
src/: backend.rs  benchmark.rs  checkpoint.rs  cli.rs  config.rs  dataset.rs  infer.rs  lib.rs  loss.rs  main.rs  metrics.rs  model.rs  postprocess.rs  preprocess.rs  target.rs  train.rs  tui.rs  utils.rs  validate.rs
tests/: core.rs
tools/: build_samples.py  command.md  review_generated_labels.py  test_via_labels.py
tools/sample_builder/: .gitignore  activate.ps1  (+4 more)
(+10 files in other folders)
